--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,3 @@
-.con {
-  background-color: yellow;
-}
 .container {
   padding: 0 2rem;
 }
@@ -45,7 +42,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .title,
@@ -54,8 +51,8 @@
 }
 
 .description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+  line-height: 1;
+  font-size: 1rem;
 }
 
 .code {
@@ -143,6 +140,45 @@
 }
 
 .myImg {
-  border-radius: 10px;
-  margin: 10px;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
+
+.h2 {
+  font-size: 2.5rem;
+}
+.h3 {
+  font-size: 1.5rem;
+  margin: 2px 0 0;
+}
+
+.btn {
+  color: white;
+  padding: 7px 10px;
+  cursor: pointer;
+  font-size: 12px;
+  border-radius: 6px;
+  padding: 7px 08px;
+  background-color: #02070d;
+}
+.p {
+  max-width: 16px 0;
+  margin-bottom: 11px;
+}
+
+@media only screen and (max-width: 600px) {
+  .mainNav ul li {
+    margin: 0 6px;
+    font-weight: 600;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  .h2 {
+    font-size: 1.7rem;
+  }
+  .h3 {
+    font-size: 1.1rem;
+  }
 }
