--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -4,8 +4,38 @@
 }
 .mb3 {
   margin-bottom: 21px;
+  display: flex;
+  flex-direction: column;
 }
 
 .formLabel {
-  margin: 30px 10px 0 0;
+  padding: 7px 0;
+}
+
+.input {
+  padding: 3px;
+  font-size: 22px;
+  border-radius: 4px;
+  border: 2px solid black;
+}
+
+.formText {
+  font-size: 12px;
+  color: gray;
+  padding: 5px;
+}
+.btn {
+  color: white;
+  padding: 7px 10px;
+  cursor: pointer;
+  font-size: 12px;
+  border-radius: 6px;
+  padding: 7px 08px;
+  background-color: #02070d;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    max-width: 90vw;
+  }
 }
